# iT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp  main_testing.cpp  main_training.cpp
cmake/: find_cuda.cmake
docs/: Mapping values iT graph.R  outputs.odt
include/: agglomerator_it.h  densifier.h  it.h  provenancevectors_it.h  sampler_it.h  sampleruniform_it.h  samplerweighted_it.h  spinner_it.h  type_point_it.h  uniformsampler_it.h  util_it.h
include/Testing/: it_testing.h  myCuda.cu  myCuda.h
src/: agglomerator_it.cpp  densifier.cpp  it.cpp  provenancevectors_it.cpp  sampleruniform_it.cpp  samplerweighted_it.cpp  spinner_it.cpp  uniformsampler_it.cpp
src/Testing/: it_testing.cpp
test/: CMakeLists.txt  main_test.cpp  main_testing_test.cpp  main_training_test.cpp
test/calculation_data/: query_object.pcd  scene_cloud_filtered.pcd  test_4_agglomeration_members.pcd  test_4_agglomeration_points.pcd
test/data/: ibs_clouds_prefiltered_filtered.pcd  test_2_field_sample_uniformly.pcd  test_2_field_sample_with_weights.pcd  test_2_mags_c.txt  test_2_mags_cU.txt  test_4_agglomeration_vdata.pcd  test_4_agglomeration_vectors.pcd
test/testing_data/: 01_goodPoints.pcd  01_goodPointsX.pcd  01_samplePoints.pcd  testing.json
test/testing_data/Place/: New_Place_bowl_descriptor_8_points.pcd  New_Place_bowl_descriptor_8_vdata.pcd  New_Place_bowl_descriptor_8_vectors.pcd  UNew_Place_bowl_descriptor_8_extra.pcd  UNew_Place_bowl_descriptor_8_points.pcd  UNew_Place_bowl_descriptor_8_vdata.pcd  UNew_Place_bowl_descriptor_8_vectors.pcd  ibs_full_Place_bowl.json  ibs_full_Place_bowl.pcd  ibs_full_Place_bowl.txt  ibs_sample_512_Place_bowl_better.pcd  ibs_sample_512_Place_bowl_betterUniform.pcd
test/testing_data/for_testing/: 01_testing_Place_bowl_kitchen5_d.pcd  01_testing_sample.pcd
test/testing_data/for_testing/Place/: New_Place_bowl_descriptor_8.pcd  UNew_Place_bowl_descriptor_8_points.pcd  ibs_sample_512_Place_bowl_better.pcd
